// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzers ESLintAnalyzer should analyze a project with installation correctly 1`] = `
Object {
  "eslint": true,
  "eslintIgnore": true,
  "eslintInstallation": Object {
    "declared": "5.12.1",
    "installed": "5.12.1",
    "latest": "5.13.0",
    "location": "devDependencies",
  },
}
`;

exports[`Analyzers ESLintAnalyzer should analyze a project without ignore & installation correctly 1`] = `
Object {
  "eslint": true,
  "eslintIgnore": false,
  "eslintInstallation": Object {
    "declared": null,
    "installed": null,
    "latest": "5.13.0",
    "location": null,
  },
}
`;
